--- a/notebooks/coding/Intro to Python/16_Sets.ipynb
+++ b/notebooks/coding/Intro to Python/16_Sets.ipynb
@@ -74,6 +74,68 @@
     "set4 = set() # Create an empty set\n",
     "print(set4)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(sets_exercises)=\n",
+    "## Exercises\n",
+    "----------\n",
+    "* **Define a function** which returns how many unique values are in a list.\n",
+    "\n",
+    "**HINT**: use ```set()```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    def lenUniq(l):\n",
+    "        return len(set(l))\n",
+    "\n",
+    "    print(lenUniq([1,2,3,3,3,4,4,5,5,5,5,5,7]))\n",
+    "```    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------\n",
+    "* **Define a function** which calculates intersection of sets in a given list of sets.\n",
+    "\n",
+    "**HINT**: Use the ```intersection()``` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{admonition} Anwser\n",
+    ":class: dropdown\n",
+    "\n",
+    "    def interSets(sets):\n",
+    "    \n",
+    "        res = sets[0]\n",
+    "        for i in sets:\n",
+    "            res = res.intersection(i)\n",
+    "        return res\n",
+    "\n",
+    "    print(interSets([set([1,2,3]),set([1,4,5]),set([0,4,1])]))\n",
+    "               \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -92,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
