--- a/_sources/mathematics/math_methods_1/Coordinate_Systems.ipynb
+++ b/_sources/mathematics/math_methods_1/Coordinate_Systems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "tags": [
      "hide-input"
@@ -14,15 +14,6 @@
      "output_type": "stream",
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rossberridge/opt/anaconda3/lib/python3.7/site-packages/IPython/core/magics/pylab.py:160: UserWarning: pylab import has clobbered these variables: ['interactive']\n",
-      "`%matplotlib` prevents importing * from pylab and numpy\n",
-      "  \"\\n`%matplotlib` prevents importing * from pylab and numpy\"\n"
      ]
     }
    ],
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "hide-input"
@@ -108,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "tags": [
      "hide-input"
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "tags": [
      "hide-input"
@@ -187,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "hide-input"
@@ -279,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "tags": [
      "hide-input"
@@ -339,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "hide-input"
@@ -417,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "hide-input"
@@ -488,13 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc0c3a9163c3479f844e9288bdca388f",
+       "model_id": "5a6d26f6755942adb8f683ed2c3bb273",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,8 +498,6 @@
     }
    ],
    "source": [
-    "###### CARTESIAN COORDINATES ######\n",
-    "###### Lecture 1, slide 3 ######\n",
     "# A Cartesian coordinate vector in the form (x, y).\n",
     "from ipywidgets import interactive\n",
     "%matplotlib inline\n",
@@ -537,7 +526,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acbfdc43eb4146a1b5b858a9c4e53692",
+       "model_id": "84041f8c9141448996d27fa03d4e71ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,9 +539,6 @@
     }
    ],
    "source": [
-    "###### CARTESIAN TO POLAR CONVERSION ######\n",
-    "###### Lecture 1, slide 4 ######\n",
-    "\n",
     "#Cartesian to polar sliders\n",
     "# Remember: theta will be in RADIANS\n",
     "\n",
@@ -573,23 +559,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Polar to cartesian conversion\n",
+    "\n",
+    "Lecture 1, slide 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converting r = 6400.00, theta = 1.97 back to Cartesian coordinates\n",
-      "x = -1795.41\n",
-      "y = -3904.71\n"
+      "Converting r = 6400.00, theta = 1.97 back to Cartesian coordinates\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-d2499be0faef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Converting r = %.2f, theta = %.2f back to Cartesian coordinates\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msTheta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mvCoordinate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0msR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msTheta\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;34m(\u001b[0m\u001b[0msX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msY\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpolar_to_cartesian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvCoordinate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"x = %.2f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"y = %.2f\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0msY\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-21f368f3cfca>\u001b[0m in \u001b[0;36mpolar_to_cartesian\u001b[0;34m(vCoordinate)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpolar_to_cartesian\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvCoordinate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;34m'''A function to convert 2D Polar coordinates to Cartesian coordinates.'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mvCoordinate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;31m# Interpret input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0msR\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvCoordinate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'x' is not defined"
      ]
     }
    ],
    "source": [
-    "###### POLAR TO CARTESIAN CONVERSION ######\n",
-    "###### Lecture 1, slide 4 ######\n",
     "print(\"Converting r = %.2f, theta = %.2f back to Cartesian coordinates\" % (sR, sTheta))\n",
     "vCoordinate = [sR, sTheta]\n",
     "(sX, sY) = polar_to_cartesian(vCoordinate)\n",
@@ -602,19 +605,21 @@
    "metadata": {},
    "source": [
     "## Cylindrical and spherical coordinates\n",
-    "* Lecture 1, slide 7\n",
-    "* Lecture 1, slide 10"
+    "\n",
+    "Lecture 1, slide 7\n",
+    "\n",
+    "Lecture 1, slide 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42cdef1625a145889b10057cb658bd56",
+       "model_id": "084a317bf6bc4fe68dded66c45354afd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -627,12 +632,6 @@
     }
    ],
    "source": [
-    "###### CYLINDRICAL COORDINATES ######\n",
-    "###### Lecture 1, slide 7 ######\n",
-    "\n",
-    "###### SPHERICAL COORDINATES ######\n",
-    "###### Lecture 1, slide 10 ######\n",
-    "\n",
     "#Change the xSystems tab to 'Cylindrical' and 'Spherical' to see the \n",
     "# 3D cartesian coordinates converted to Cylindrical and Spherical coordinates respectively\n",
     "systems = ['Cylindrical','Spherical']\n",
@@ -642,8 +641,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Spherical to cartesian"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -667,8 +673,6 @@
     }
    ],
    "source": [
-    "###### SPHERICAL to CARTESIAN ######\n",
-    "\n",
     "# Let's define some spherical coordinates. . .\n",
     "sR = 6400.0\n",
     "# Convert angles in degrees to radians\n",
@@ -710,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
